# grazr

./: .blackignore  .gitignore  LICENSE.md  README.md  build_grazr_deb.sh  bundle_nvm.sh  bundle_postgres.sh  bundle_redis.sh  com.linuxherd.pkexec.policy  pyproject.toml  requirements-dev.txt  requirements.txt  resources.qrc
.github/workflows/: code-quality.yml
appimage-build/apt/: apt.conf  sources.list
appimage-build/apt/dpkg/: status
appimage-build/apt/lists/: archive.ubuntu.com_ubuntu_dists_jammy-updates_InRelease
docs/: CONTRIBUTING.md  Packaging_Guide.md  Registering_Icons.md  UI_Development_Guide.md
docs/core/: Core_System_Configuration_and_Shims.md  Core_System_Process_Manager.md  Worker_And_Task_Handling.md
docs/notes/: nginx.md
docs/services/: MinIO_Management.md  MySQL_Management.md  NGINX_MANAGEMENT.md  Node_Management.md  PHP_Management.md  PostgreSQL_Instance_Management.md  Redis_Management.md  SSL_Management_mkcert.md
grazr/: cli.py  main.py
grazr/core/: config.py  process_manager.py  system_utils.py  worker.py
grazr/managers/: hosts_manager.py  minio_manager.py  mysql_manager.py  nginx_manager.py  node_manager.py  php_manager.py  postgres_manager.py  redis_manager.py  services_config_manager.py  site_manager.py  ssl_manager.py
grazr/ui/: add_service_dialog.py  common_php_ini_settings_widget.py  generic_service_detail_widget.py  header.py  log_view.py  main_window.py  node_page.py  php_config_dialog.py  php_extensions_dialog.py  php_extensions_manager_widget.py  php_page.py  service_item_widget.py  services_page.py  sidebar.py  site_actions_panel.py  site_config_panel.py  site_detail_widget.py  sites_page.py  style.qss  version_list_panel_widget.py
grazr/ui/widgets/: php_version_item_widget.py  site_list_item_widget.py  status_indicator.py
linuxherd/: cli.py  com.linuxherd.pkexec.manage_service  main.py
linuxherd/core/: config.py  nginx_configurator.py  php_manager.py  process_manager.py  root_helper.py  site_manager.py  ssl_manager.py  system_utils.py  worker.py
linuxherd/managers/: dnsmasq_manager.py  hosts_manager.py  minio_manager.py  mysql_manager.py  nginx_manager.py  node_manager.py  php_manager.py  postgres_manager.py  redis_manager.py  services_config_manager.py  site_manager.py  ssl_manager.py
linuxherd/ui/: add_service_dialog.py  main_window.py  node_page.py  php_config_dialog.py  php_extensions_dialog.py  php_page.py  resources_rc.py  service_item_widget.py  services_page.py  sites_page.py  style.qss  ui_styles.py
packaging/: build_grazr_appimage.sh  build_grazr_deb.sh  com.grazr.pkexec.policy  com.linuxherd.pkexec.policy  grazr_root_helper.py  linuxherd_root_helper.py  node-shim.sh  php-shim.sh
packaging/bundling/: bundle_minio.sh  bundle_mkcert.sh  bundle_mysql.sh  bundle_nginx.sh  bundle_nvm.sh  bundle_php.sh  bundle_postgres.sh  bundle_redis.sh
(+3 files in other folders)
